--- a/package.json
+++ b/package.json
@@ -3,21 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.13",
     "@mui/styled-engine": "^5.10.8",
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "emotion": "^11.0.0",
+    "file-system": "^2.2.2",
+    "fs": "^0.0.1-security",
     "get-google-fonts": "^1.2.2",
+    "ipfs-http-client": "^57.0.3",
+    "moment": "^2.29.4",
+    "moralis": "^2.7.2",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-countdown": "^2.3.3",
     "react-dom": "^18.2.0",
+    "react-fs": "^0.0.0",
     "react-icons": "^4.6.0",
+    "react-moment": "^1.1.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^4.0.2",
+    "react-toastify": "^8.2.0",
     "swiper": "^8.4.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
