--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.20.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
@@ -18,7 +19,7 @@
     "file-system": "^2.2.2",
     "fs": "^0.0.1-security",
     "get-google-fonts": "^1.2.2",
-    "ipfs-http-client": "^57.0.3",
+    "ipfs-http-client": "^50.1.2",
     "moment": "^2.29.4",
     "moralis": "^2.7.2",
     "node-polyfill-webpack-plugin": "^2.0.1",
@@ -34,6 +35,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "^4.0.2",
     "react-toastify": "^8.2.0",
+    "readfilesync": "^1.1.5",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4",
     "web3": "^1.8.1"
