--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-toastify": "^8.2.0",
     "readfilesync": "^1.1.5",
     "swiper": "^8.0.2",
+    "tronweb": "^4.4.0",
     "web-vitals": "^2.1.4",
     "web3": "^1.8.1"
   },
