--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-countdown": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-fs": "^0.0.0",
@@ -40,11 +41,12 @@
     "swiper": "^8.0.2",
     "tronweb": "^4.4.0",
     "web-vitals": "^2.1.4",
-    "web3": "^1.8.1"
+    "web3": "^1.8.1",
+    "webpack": "^4.44.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
