--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.10.13",
     "@mui/styled-engine": "^5.10.8",
     "@reduxjs/toolkit": "^1.9.0",
+    "@tanstack/react-query": "^4.22.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -35,6 +36,7 @@
     "react-moralis": "^1.4.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^4.0.2",
     "react-toastify": "^8.2.0",
     "readfilesync": "^1.1.5",
